compile_tests/expected/fns.stderr
error: unsupported parameter
 --> compile_tests/src/fns.rs:7:23
  |
7 |     fn func_with_self(self) {}
  |                       ^^^^

error: `self` parameter is only allowed in associated functions
 --> compile_tests/src/fns.rs:7:23
  |
7 |     fn func_with_self(self) {}
  |                       ^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions


